force-app/main/default/objects/LossDetails__c/LossDetails__c.object-meta.xml
<CustomObject>
    <label>LossDetail</label>
    <nameField>
        <label>Flight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LossDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>