force-app/main/default/objects/LossDetails__c/fields/Loss_reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_reason__c</fullName>
    <label>Loss reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>