force-app/main/default/objects/LossDetails__c/fields/LossAmount__c.field-meta.xml
<CustomField>
    <fullName>LossAmount__c</fullName>
    <label>LossAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>