force-app/main/default/objects/LossDetails__c/fields/Pilot_assigned__c.field-meta.xml
<CustomField>
    <fullName>Pilot_assigned__c</fullName>
    <label>Pilot assigned</label>
    <length>50</length>
    <type>Text</type>
</CustomField>